# python-workspace

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  justfile  pyproject.toml
notebooks/: hello.ipynb  marimo.py
tests/: test_addition.py
